--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 
 
 
-<a href="/task-3/inde.html">task3 </a>
+<a href="/task-3/index.html">task3 </a>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
