--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../task-3/index.html">Link</a>
+    <a href="../task-3/index.html">components</a>
 </body>
